fix owner user validate

--- a/disjob-samples/disjob-samples-springboot-merged/pom.xml
+++ b/disjob-samples/disjob-samples-springboot-merged/pom.xml
@@ -32,11 +32,11 @@
       <artifactId>disjob-worker</artifactId>
     </dependency>
 
-    <dependency>
+    <!--<dependency>
       <groupId>de.codecentric</groupId>
       <artifactId>spring-boot-admin-starter-server</artifactId>
       <version>${spring-boot-admin.version}</version>
-    </dependency>
+    </dependency>-->
   </dependencies>
 
   <build>
