--- a/disjob-samples/disjob-samples-springboot-worker/pom.xml
+++ b/disjob-samples/disjob-samples-springboot-worker/pom.xml
@@ -24,11 +24,11 @@
       <artifactId>disjob-worker</artifactId>
     </dependency>
 
-    <dependency>
+    <!--<dependency>
       <groupId>de.codecentric</groupId>
       <artifactId>spring-boot-admin-starter-client</artifactId>
       <version>${spring-boot-admin.version}</version>
-    </dependency>
+    </dependency>-->
   </dependencies>
 
   <build>
