--- a/disjob-samples/disjob-samples-springboot-worker/src/main/resources/application.yml
+++ b/disjob-samples/disjob-samples-springboot-worker/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 server.port: 8083
 spring.profiles.include: web,worker,redis
 
-spring.boot.admin.client:
-  url: http://localhost:8081
-  instance:
-    service-host-type: IP
+#spring.boot.admin.client:
+#  url: http://localhost:8081
+#  instance:
+#    service-host-type: IP
