upgrade jar version

--- a/disjob-supervisor/src/test/resources/application.yml
+++ b/disjob-supervisor/src/test/resources/application.yml
@@ -1,4 +1,5 @@
-server.port: 0
+# -1: 单元测试时关闭HTTP端点；0: 自动寻找一个空闲的端口；${random.int[1,65535]}: 随机端口但可能会有端口冲突；
+server.port: -1
 
 # database configuration
 disjob.datasource:
