--- a/disjob-supervisor/src/test/resources/application.yml
+++ b/disjob-supervisor/src/test/resources/application.yml
@@ -12,6 +12,16 @@ disjob.datasource:
   connection-timeout: 2000
   pool-name: disjob
 
+disjob-admin.datasource:
+  driver-class-name: com.mysql.cj.jdbc.Driver
+  jdbc-url: jdbc:mysql://localhost:23306/disjob_admin?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
+  username: disjob_admin
+  password: disjob_admin$123456
+  minimum-idle: 2
+  maximum-pool-size: 20
+  connection-timeout: 2000
+  pool-name: disjob-admin
+
 # redis configuration
 spring.redis:
   client-type: LETTUCE
