--- a/disjob-admin/ruoyi-admin/pom.xml
+++ b/disjob-admin/ruoyi-admin/pom.xml
@@ -102,7 +102,8 @@
           </execution>
         </executions>
       </plugin>
-      <!--<plugin>
+      <!--
+      <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
         <version>${maven-war-plugin.version}</version>
@@ -110,7 +111,8 @@
           <failOnMissingWebXml>false</failOnMissingWebXml>
           <warName>${project.artifactId}</warName>
         </configuration>
-      </plugin>-->
+      </plugin>
+      -->
     </plugins>
   </build>
 
