--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,11 @@
       <artifactId>spring-boot-configuration-processor</artifactId>
       <scope>provided</scope>
     </dependency>
-    <!-- 谨慎使用`spring-context-indexer`(经常会出现启动后运行报错的问题)：对于多模块项目，包含@Component的模块都需要在其pom中增加该依赖，否则启动会报错
+    <!--
+     | 谨慎使用`spring-context-indexer`(经常会出现启动时报错的问题)：对于多模块项目，包含@Component的模块都需要在其pom中增加该依赖，否则启动会报错
+     | org.springframework.context.annotation.ClassPathScanningCandidateComponentProvider#findCandidateComponents()
+     | org.springframework.context.index.CandidateComponentsIndexLoader#doLoadIndex(ClassLoader) -> "META-INF/spring.components"
+     | 忽略indexer的配置：spring.index.ignore=true
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context-indexer</artifactId>
