upgrade druid version to 1.2.22

--- a/disjob-registry/disjob-registry-etcd/pom.xml
+++ b/disjob-registry/disjob-registry-etcd/pom.xml
@@ -35,6 +35,10 @@
           <groupId>javax.annotation</groupId>
           <artifactId>javax.annotation-api</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
       </exclusions>
     </dependency>
 
@@ -43,6 +47,12 @@
       <artifactId>jetcd-launcher</artifactId>
       <version>${jetcd.version}</version>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>com.google.guava</groupId>
+          <artifactId>guava</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
