--- a/disjob-samples/disjob-samples-springboot-supervisor/pom.xml
+++ b/disjob-samples/disjob-samples-springboot-supervisor/pom.xml
@@ -21,6 +21,11 @@
     </dependency>
     <dependency>
       <groupId>cn.ponfee</groupId>
+      <artifactId>disjob-samples-conf-supervisor</artifactId>
+      <version>${project.parent.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>cn.ponfee</groupId>
       <artifactId>disjob-id</artifactId>
     </dependency>
     <dependency>
@@ -31,27 +36,6 @@
 
   <build>
     <finalName>${project.artifactId}</finalName>
-
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
-        <filtering>false</filtering>
-      </resource>
-      <resource>
-        <directory>../conf-common</directory>
-        <includes>
-          <include>**</include>
-        </includes>
-        <filtering>false</filtering>
-      </resource>
-      <resource>
-        <directory>../conf-supervisor</directory>
-        <includes>
-          <include>**</include>
-        </includes>
-        <filtering>false</filtering>
-      </resource>
-    </resources>
 
     <plugins>
       <plugin>
