--- a/pom.xml
+++ b/pom.xml
@@ -64,14 +64,14 @@
     <revision>2.1.2-SNAPSHOT</revision>
 
     <file.encoding>UTF-8</file.encoding>
-    <java.version>8</java.version>
+    <java.version>1.8</java.version>
     <project.build.sourceEncoding>${file.encoding}</project.build.sourceEncoding>
     <project.reporting.outputEncoding>${file.encoding}</project.reporting.outputEncoding>
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <maven.compiler.compilerVersion>${java.version}</maven.compiler.compilerVersion>
     <argLine>-Dfile.encoding=UTF-8 -Djava.net.preferIPv4Stack=true</argLine>
-    <java9.module.argLine></java9.module.argLine>
+    <module.exports.argLine> </module.exports.argLine>
 
     <spring-boot.version>2.7.18</spring-boot.version>
     <mapstruct.version>1.5.5.Final</mapstruct.version>
@@ -89,10 +89,8 @@
     <testcontainers.version>1.19.8</testcontainers.version>
 
     <!-- spring-boot-dependencies [type=pom, scope=import]方式，无法自动引入plugin依赖版本 -->
-    <maven-clean-plugin.version>3.2.0</maven-clean-plugin.version>
     <maven-resources-plugin.version>3.2.0</maven-resources-plugin.version>
     <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-    <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>
     <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
     <maven-source-plugin.version>3.2.1</maven-source-plugin.version>
     <maven-javadoc-plugin.version>3.4.1</maven-javadoc-plugin.version>
@@ -191,19 +189,14 @@
 
   <profiles>
     <profile>
-      <id>java9-module-exports</id>
+      <id>module-exports</id>
       <activation>
+        <!-- 从JDK 9开始，Java版本号不再使用 1.x 的方式命名，而是直接使用 x 的方式命名 -->
         <jdk>[9,)</jdk>
       </activation>
       <properties>
-        <java9.module.argLine>--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</java9.module.argLine>
+        <module.exports.argLine>--add-exports=java.base/sun.reflect.annotation=ALL-UNNAMED</module.exports.argLine>
       </properties>
-    </profile>
-    <profile>
-      <id>develop</id>
-      <activation>
-        <activeByDefault>true</activeByDefault>
-      </activation>
     </profile>
     <profile>
       <id>release</id>
@@ -250,45 +243,9 @@
     <pluginManagement>
       <plugins>
         <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>flatten-maven-plugin</artifactId>
-          <version>${flatten-maven-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-clean-plugin</artifactId>
-          <version>${maven-clean-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>${maven-resources-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>${maven-compiler-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-failsafe-plugin</artifactId>
-          <version>${maven-failsafe-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <!-- 若jacoco覆盖率显示为0，则可能是surefire版本问题 -->
-          <version>${maven-surefire-plugin.version}</version>
-        </plugin>
-        <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
           <version>${jacoco-maven-plugin.version}</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-source-plugin</artifactId>
-          <version>${maven-source-plugin.version}</version>
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
@@ -302,6 +259,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
+        <version>${flatten-maven-plugin.version}</version>
         <configuration>
           <updatePomFile>true</updatePomFile>
           <flattenMode>resolveCiFriendliesOnly</flattenMode>
@@ -327,6 +285,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
+        <version>${maven-resources-plugin.version}</version>
         <configuration>
           <encoding>${file.encoding}</encoding>
         </configuration>
@@ -334,13 +293,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>${maven-compiler-plugin.version}</version>
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
           <compilerVersion>${java.version}</compilerVersion>
           <encoding>${file.encoding}</encoding>
           <compilerArgs>
-            <arg>${java9.module.argLine}</arg>
+            <arg>${module.exports.argLine}</arg>
             <arg>-Xlint:unchecked,deprecation</arg>
           </compilerArgs>
         </configuration>
@@ -348,12 +308,14 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
+        <!-- 若jacoco覆盖率显示为0，则可能是surefire版本问题 -->
+        <version>${maven-surefire-plugin.version}</version>
         <configuration>
           <printSummary>true</printSummary>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
           <forkCount>1</forkCount>
           <reuseForks>true</reuseForks>
-          <argLine>${java9.module.argLine} ${argLine} ${jacocoArgLine}</argLine>
+          <argLine>${module.exports.argLine} ${argLine} ${jacocoArgLine}</argLine>
         </configuration>
       </plugin>
       <plugin>
@@ -381,6 +343,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
+        <version>${maven-source-plugin.version}</version>
         <executions>
           <execution>
             <id>attach-sources</id>
