datasource pool name

--- a/disjob-admin/ruoyi-disjob/src/main/resources/application-disjob-mysql.yml
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/application-disjob-mysql.yml
@@ -7,4 +7,4 @@ datasource.disjob:
   minimum-idle: 2
   maximum-pool-size: 20
   connection-timeout: 2000
-  pool-name: disjob_admin
+  pool-name: disjob
