--- a/disjob-admin/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/disjob-admin/ruoyi-admin/src/main/resources/application-druid.yml
@@ -5,7 +5,7 @@ spring.datasource:
   druid:
     # 主库数据源
     master:
-      url: jdbc:mysql://localhost:3306/disjob_admin?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2B8
+      url: jdbc:mysql://localhost:3306/disjob_admin?useUnicode=true&characterEncoding=utf8&connectTimeout=2000&socketTimeout=5000&zeroDateTimeBehavior=convertToNull&useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=GMT%2B8
       username: disjob_admin
       password: disjob_admin$123456
     # 从库数据源
