--- a/disjob-samples/disjob-samples-conf-worker/pom.xml
+++ b/disjob-samples/disjob-samples-conf-worker/pom.xml
@@ -8,6 +8,7 @@
     <groupId>cn.ponfee</groupId>
     <artifactId>disjob-samples</artifactId>
     <version>${revision}</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>disjob-samples-conf-worker</artifactId>
