--- a/disjob-admin/ruoyi-common/pom.xml
+++ b/disjob-admin/ruoyi-common/pom.xml
@@ -8,6 +8,7 @@
     <groupId>cn.ponfee</groupId>
     <artifactId>disjob-admin</artifactId>
     <version>${revision}</version>
+    <relativePath>../pom.xml</relativePath>
   </parent>
 
   <artifactId>ruoyi-common</artifactId>
