--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
     </snapshotRepository>
     <repository>
       <id>ossrh</id>
-      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      <url>https://s01.oss.sonatype.org/content/repositories/releases/</url>
     </repository>
   </distributionManagement>
 
@@ -61,7 +61,7 @@
   </modules>
 
   <properties>
-    <revision>2.1.2-SNAPSHOT</revision>
+    <revision>2.1.2</revision>
 
     <file.encoding>UTF-8</file.encoding>
     <java.version>1.8</java.version>
