--- a/disjob-samples/pom.xml
+++ b/disjob-samples/pom.xml
@@ -26,7 +26,7 @@
 
   <properties>
     <revision>1.0.0-SNAPSHOT</revision>
-    <disjob.version>2.1.2</disjob.version>
+    <disjob.version>2.1.3-SNAPSHOT</disjob.version>
 
     <file.encoding>UTF-8</file.encoding>
     <java.version>1.8</java.version>
