--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
   </modules>
 
   <properties>
-    <revision>2.1.2</revision>
+    <revision>2.1.3-SNAPSHOT</revision>
 
     <file.encoding>UTF-8</file.encoding>
     <java.version>1.8</java.version>
