compute next trigger time

--- a/disjob-admin/ruoyi-disjob/src/main/resources/application-disjob-mysql.yml
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/application-disjob-mysql.yml
@@ -1,10 +1,11 @@
-# database configuration
-datasource.disjob:
-  driver-class-name: com.mysql.cj.jdbc.Driver
-  jdbc-url: jdbc:mysql://localhost:3306/disjob?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
-  username: disjob
-  password: disjob$123456
-  minimum-idle: 2
-  maximum-pool-size: 20
-  connection-timeout: 2000
-  pool-name: disjob
+# database configuration：前面的`disjob.datasource`为固定前缀，后面的`disjob`为数据源名
+disjob.datasource:
+  disjob:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    jdbc-url: jdbc:mysql://localhost:3306/disjob?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true&connectTimeout=2000&socketTimeout=5000&serverTimezone=Asia/Shanghai&failOverReadOnly=false
+    username: disjob
+    password: disjob$123456
+    minimum-idle: 2
+    maximum-pool-size: 20
+    connection-timeout: 2000
+    pool-name: disjob
