--- a/disjob-admin/pom.xml
+++ b/disjob-admin/pom.xml
@@ -46,6 +46,7 @@
     <commons-io.version>2.16.1</commons-io.version>
     <poi-ooxml.version>5.3.0</poi-ooxml.version>
     <velocity-engine-core.version>2.3</velocity-engine-core.version>
+    <graphviz-java.version>0.18.1</graphviz-java.version>
     <springdoc-openapi-ui.version>1.8.0</springdoc-openapi-ui.version>
 
     <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
