--- a/pom.xml
+++ b/pom.xml
@@ -74,18 +74,18 @@
     <moduleExportsArgLine />
 
     <spring-boot.version>2.7.18</spring-boot.version>
-    <mapstruct.version>1.5.5.Final</mapstruct.version>
-    <guava.version>33.2.1-jre</guava.version>
+    <mapstruct.version>1.6.0</mapstruct.version>
+    <guava.version>33.3.0-jre</guava.version>
     <commons-collections4.version>4.4</commons-collections4.version>
     <commons-io.version>2.16.1</commons-io.version>
     <mybatis-spring-boot-starter.version>2.3.2</mybatis-spring-boot-starter.version>
     <jna-platform.version>5.14.0</jna-platform.version>
     <curator-recipes.version>5.7.0</curator-recipes.version>
+    <graphviz-java.version>0.18.1</graphviz-java.version>
 
     <!-- Use for test -->
     <mariaDB4j.version>2.5.3</mariaDB4j.version>
     <embedded-redis.version>1.4</embedded-redis.version>
-    <graphviz-java.version>0.18.1</graphviz-java.version>
     <testcontainers.version>1.20.1</testcontainers.version>
 
     <!-- spring-boot-dependencies [type=pom, scope=import]方式，无法自动引入plugin依赖版本 -->
@@ -97,7 +97,7 @@
 
     <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
     <jacoco-maven-plugin.version>0.8.12</jacoco-maven-plugin.version>
-    <maven-gpg-plugin.version>3.2.4</maven-gpg-plugin.version>
+    <maven-gpg-plugin.version>3.2.5</maven-gpg-plugin.version>
   </properties>
 
   <dependencyManagement>
