--- a/disjob-admin/ruoyi-admin/pom.xml
+++ b/disjob-admin/ruoyi-admin/pom.xml
@@ -54,7 +54,7 @@
       <artifactId>log4j-over-slf4j</artifactId>
     </dependency>
 
-    <!-- SpringBoot集成thymeleaf模板 -->
+    <!-- SpringBoot集成thymeleaf模板：https://www.thymeleaf.org/doc/tutorials/3.1/usingthymeleaf.html -->
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-thymeleaf</artifactId>
