--- a/disjob-alert/disjob-alert-email/pom.xml
+++ b/disjob-alert/disjob-alert-email/pom.xml
@@ -22,6 +22,11 @@
       <artifactId>disjob-alert-api</artifactId>
       <version>${project.parent.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.sun.mail</groupId>
+      <artifactId>jakarta.mail</artifactId>
+      <version>2.0.1</version> <!-- 使用最新版本 -->
+    </dependency>
   </dependencies>
 
 </project>
