--- a/disjob-admin/ruoyi-disjob/src/main/resources/application-disjob-alert.yml
+++ b/disjob-admin/ruoyi-disjob/src/main/resources/application-disjob-alert.yml
@@ -9,6 +9,36 @@ disjob.alert:
     lark:
       urlKey: xxx
       secret: xxx
+    sms:
+      blends:
+        # 自定义的标识，也就是configId这里可以是任意值（最好不要是中文）
+        tx1:
+          #厂商标识，标定此配置是哪个厂商，详细请看厂商标识介绍部分
+          supplier: tencent
+          #您的accessKey
+          access-key-id: 您的accessKey
+          #您的accessKeySecret
+          access-key-secret: 您的accessKeySecret
+          #您的短信签名
+          signature: 您的短信签名
+          #模板ID 非必须配置，如果使用sendMessage的快速发送需此配置
+          template-id: xxxxxxxx
+          #您的sdkAppId
+          sdk-app-id: 您的sdkAppId
+          # 自定义的标识，也就是configId这里可以是任意值（最好不要是中文）
+        tx2:
+          #厂商标识，标定此配置是哪个厂商，详细请看厂商标识介绍部分
+          supplier: tencent
+          #您的accessKey
+          access-key-id: 您的accessKey
+          #您的accessKeySecret
+          access-key-secret: 您的accessKeySecret
+          #您的短信签名
+          signature: 您的短信签名
+          #模板ID 非必须配置，如果使用sendMessage的快速发送需此配置
+          template-id: xxxxxxxx
+          #您的sdkAppId
+          sdk-app-id: 您的sdkAppId
 
   alerter:
     type-channel-map:
